--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@jsverse/transloco": "^7.4.2",
     "@lagoshny/ngx-hateoas-client": "^3.9.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
